--- a/Ubuntu/wb_profile/php5/etc/php.ini
+++ b/Ubuntu/wb_profile/php5/etc/php.ini
@@ -1,10 +1,18 @@
 [PHP]
 
 ;;;;;;;;;;;;;;;;;;;;
+; php.ini Options  ;
+;;;;;;;;;;;;;;;;;;;;
+
+user_ini.filename =
+
+user_ini.cache_ttl = 600
+
+;;;;;;;;;;;;;;;;;;;;
 ; Language Options ;
 ;;;;;;;;;;;;;;;;;;;;
 
-short_open_tag = On
+short_open_tag = Off
 
 precision = 14
 
@@ -62,9 +70,6 @@ post_max_size = 30M
 
 include_path = "."
 
-doc_root =
-user_dir =
-
 sys_temp_dir = "/srv/php5/var/tmp"
 
 enable_dl = Off
@@ -90,6 +95,7 @@ max_file_uploads = 20
 
 allow_url_fopen = On
 allow_url_include = Off
+
 default_socket_timeout = 60
 
 ;;;;;;;;;;;;;;;;;;;
@@ -106,24 +112,28 @@ date.default_longitude = 121.4500
 [Pdo_mysql]
 
 pdo_mysql.cache_size = 2000
-pdo_mysql.default_socket = /srv/mysql/var/run/mysql.sock
+pdo_mysql.default_socket = "/srv/mysql/var/run/mysql.sock"
 
 [mail function]
 
-SMTP = smtp.anrip.com
-smtp_port = 25
+;sendmail_path = "sendmail -t -i"
 
-sendmail_from = public@anrip.com
-
+mail.add_x_header = Off
 mail.log = "/srv/php5/var/log/mail.log"
 
 [MySQL]
 
-mysql.default_socket = /srv/mysql/var/run/mysql.sock
+mysql.allow_local_infile = On
+mysql.allow_persistent = On
+
+mysql.default_socket = "/srv/mysql/var/run/mysql.sock"
 
 [MySQLi]
 
-mysqli.default_socket = /srv/mysql/var/run/mysql.sock
+mysqli.allow_local_infile = On
+mysqli.allow_persistent = On
+
+mysqli.default_socket = "/srv/mysql/var/run/mysql.sock"
 
 [Session]
 
@@ -134,3 +144,8 @@ session.name = WEBOXSID
 session.gc_probability = 5
 
 url_rewriter.tags = "a=href,area=href,frame=src,input=src,form=fakeentry"
+
+[mbstring]
+
+;mbstring.http_input =
+;mbstring.http_output =
