--- a/MacOS/wb_profile/nginx/etc/nginx.conf
+++ b/MacOS/wb_profile/nginx/etc/nginx.conf
@@ -1,8 +1,7 @@
 
 user _www _www;
 
-worker_processes 2;
-#worker_cpu_affinity 00000001 00000010;
+worker_processes auto;
 #worker_rlimit_nofile 102400;
 
 error_log var/log/error.log crit;
@@ -11,8 +10,8 @@ pid var/run/nginx.pid;
 
 events {
 
-    use kqueue;
     worker_connections 65535;
+    use kqueue;
 
 }
 
