--- a/MacOS/wb_profile/nginx/etc/nginx.conf
+++ b/MacOS/wb_profile/nginx/etc/nginx.conf
@@ -28,8 +28,14 @@ http {
         '"$http_referer" "$http_user_agent" "$http_x_forwarded_for"'
     ;
 
-    #access_log var/log/access.log main;
+    log_format stat
+        '$remote_addr - $remote_user [$time_local] '
+        '"$request_method $scheme://$host$request_uri $server_protocol" '
+        '$status $body_bytes_sent "$http_referer" "$http_user_agent" "$http_x_forwarded_for"'
+    ;
+
     access_log off;
+    #access_log var/log/access.log main;
 
     sendfile on;
     tcp_nopush on;
