修复编译错误

--- a/Ubuntu/wb_profile/mysql/etc/my.cnf
+++ b/Ubuntu/wb_profile/mysql/etc/my.cnf
@@ -1,5 +1,5 @@
 # For advice on how to change settings please see
-# http://dev.mysql.com/doc/refman/5.6/en/server-configuration-defaults.html
+# http://dev.mysql.com/doc/refman/5.7/en/server-configuration-defaults.html
 
 [mysql]
 
@@ -7,7 +7,7 @@ socket = /srv/mysql/var/run/mysql.sock
 
 [mysqld]
 
-skip-external-locking
+skip_external_locking
 explicit_defaults_for_timestamp
 
 #
@@ -15,11 +15,11 @@ explicit_defaults_for_timestamp
 #
 
 user             = mysql
-pid-file         = /srv/mysql/var/run/mysql.pid
+pid_file         = /srv/mysql/var/run/mysql.pid
 socket           = /srv/mysql/var/run/mysql.sock
 
 port             = 3306
-bind-address     = 127.0.0.1
+bind_address     = 127.0.0.1
 
 basedir          = /srv/mysql
 datadir          = /srv/mysql/var/data
@@ -29,37 +29,22 @@ tmpdir           = /srv/mysql/var/tmp
 # * Fine Tuning
 #
 
-key_buffer_size     = 8M
-max_allowed_packet  = 4M
-thread_stack        = 256K
-thread_cache_size   = 9
-
-max_connections     = 100
-
-query_cache_limit   = 1M
-query_cache_size    = 1M
+max_connections  = 128
 
 sql_mode=NO_ENGINE_SUBSTITUTION,STRICT_TRANS_TABLES 
 
 #
-# * Logging and Replication
+# * Logging
 #
 
-#general_log_file   = /srv/mysql/var/log/mysql.log
-#general_log        = 1
-
 log_error           = /srv/mysql/var/log/error.log
+
+general_log         = 0
+general_log_file    = /srv/mysql/var/log/mysql.log
 
 slow_query_log
 slow_query_log_file = /srv/mysql/var/log/slow.log
 long_query_time     = 30
-
-#server-id          = 1
-#log_bin            = /srv/mysql/var/log/mysql.bin
-#expire_logs_days   = 30
-#max_binlog_size    = 1000M
-#binlog_do_db       = include_database_name
-#binlog_ignore_db   = include_database_name
 
 #
 # * IMPORTANT: Additional settings that can override those from this file!
