--- a/Ubuntu/wb_profile/mysql/etc/my.cnf
+++ b/Ubuntu/wb_profile/mysql/etc/my.cnf
@@ -1,7 +1,7 @@
 # For advice on how to change settings please see
 # http://dev.mysql.com/doc/refman/5.7/en/server-configuration-defaults.html
 
-[mysql]
+[client]
 
 socket = /srv/mysql/var/run/mysql.sock
 
@@ -31,7 +31,7 @@ tmpdir           = /srv/mysql/var/tmp
 
 max_connections  = 128
 
-sql_mode=NO_ENGINE_SUBSTITUTION,STRICT_TRANS_TABLES 
+sql_mode = NO_ENGINE_SUBSTITUTION,STRICT_TRANS_TABLES
 
 #
 # * Logging
