--- a/Ubuntu/wb_profile/mysql/etc/my.cnf
+++ b/Ubuntu/wb_profile/mysql/etc/my.cnf
@@ -31,7 +31,7 @@ tmpdir           = /srv/mysql/var/tmp
 
 max_connections  = 128
 
-sql_mode = NO_ENGINE_SUBSTITUTION,STRICT_TRANS_TABLES
+sql_mode = STRICT_TRANS_TABLES,NO_AUTO_CREATE_USER,NO_ENGINE_SUBSTITUTION
 
 #
 # * Logging
