update the config

--- a/MacOS/wb_profile/mysql/etc/my.cnf
+++ b/MacOS/wb_profile/mysql/etc/my.cnf
@@ -14,16 +14,18 @@ explicit_defaults_for_timestamp
 # * Basic Settings
 #
 
-user             = _mysql
-pid_file         = /srv/mysql/var/run/mysql.pid
-socket           = /srv/mysql/var/run/mysql.sock
+user              = _mysql
+pid_file          = /srv/mysql/var/run/mysql.pid
+socket            = /srv/mysql/var/run/mysql.sock
 
-port             = 3306
-bind_address     = 127.0.0.1
+port              = 3306
+bind_address      = 127.0.0.1
 
-basedir          = /srv/mysql
-datadir          = /srv/mysql/var/data
-tmpdir           = /srv/mysql/var/tmp
+basedir           = /srv/mysql
+datadir           = /srv/mysql/var/data
+tmpdir            = /srv/mysql/var/tmp
+
+keyring_file_data = /srv/mysql/var/keyring
 
 #
 # * Fine Tuning
