--- a/Ubuntu/wb_profile/php5/etc/php.ini
+++ b/Ubuntu/wb_profile/php5/etc/php.ini
@@ -34,7 +34,9 @@ expose_php = Off
 ;;;;;;;;;;;;;;;;;;;
 
 max_execution_time = 180
+
 max_input_time = 120
+max_input_vars = 3000
 
 memory_limit = 128M
 
@@ -139,6 +141,9 @@ session.save_path = "/srv/php5/var/tmp/session"
 session.name = WEBOXSID
 
 session.gc_probability = 5
+session.gc_divisor = 1000
+
+session.hash_bits_per_character = 5
 
 url_rewriter.tags = "a=href,area=href,frame=src,input=src,form=fakeentry"
 
