--- a/MacOS/wb_profile/nginx/etc/nginx.conf
+++ b/MacOS/wb_profile/nginx/etc/nginx.conf
@@ -2,7 +2,7 @@
 user _www _www;
 
 worker_processes auto;
-#worker_rlimit_nofile 102400;
+worker_rlimit_nofile 102400;
 
 error_log var/log/error.log crit;
 
