--- a/Ubuntu/wb_profile/nginx/etc/nginx.conf
+++ b/Ubuntu/wb_profile/nginx/etc/nginx.conf
@@ -2,7 +2,7 @@
 user www-data www-data;
 
 worker_processes auto;
-#worker_rlimit_nofile 102400;
+worker_rlimit_nofile 102400;
 
 error_log var/log/error.log crit;
 
