--- a/Ubuntu/wb_profile/php5/etc/php.ini
+++ b/Ubuntu/wb_profile/php5/etc/php.ini
@@ -66,6 +66,8 @@ register_argc_argv = Off
 
 post_max_size = 30M
 
+always_populate_raw_post_data = -1
+
 ;;;;;;;;;;;;;;;;;;;;;;;;;
 ; Paths and Directories ;
 ;;;;;;;;;;;;;;;;;;;;;;;;;
@@ -76,7 +78,7 @@ sys_temp_dir = "/srv/php5/var/tmp"
 
 enable_dl = Off
 
-cgi.force_redirect = 1 
+cgi.force_redirect = 1
 cgi.fix_pathinfo = 0
 
 ;;;;;;;;;;;;;;;;
