--- a/Ubuntu/wb_profile/nginx/etc/nginx.conf
+++ b/Ubuntu/wb_profile/nginx/etc/nginx.conf
@@ -26,11 +26,6 @@ http {
     default_type application/octet-stream;
 
     log_format main
-        '$remote_addr - $remote_user [$time_local] "$request" $status $body_bytes_sent '
-        '"$http_referer" "$http_user_agent" "$http_x_forwarded_for"'
-    ;
-
-    log_format stat
         '$remote_addr - $remote_user [$time_local] '
         '"$request_method $scheme://$host$request_uri $server_protocol" '
         '$status $body_bytes_sent "$http_referer" "$http_user_agent" "$http_x_forwarded_for"'
@@ -41,7 +36,7 @@ http {
 
     sendfile on;
     tcp_nopush on;
-    #tcp_nodelay on;
+    tcp_nodelay off;
 
     keepalive_timeout 65;
 
