更改redis配置文件

--- a/MacOS/wb_profile/redis/etc/redis.conf
+++ b/MacOS/wb_profile/redis/etc/redis.conf
@@ -19,5 +19,5 @@
 # options, it is better to use include as the last line.
 #
 
-include /srv/redis/etc/conf.d/local.conf
-include /srv/redis/etc/conf.d/other.conf
+include /srv/redis/etc/conf.d/server.conf
+include /srv/redis/etc/conf.d/useful.conf
