--- a/MacOS/wb_profile/php5/etc/php.ini
+++ b/MacOS/wb_profile/php5/etc/php.ini
@@ -20,7 +20,7 @@ output_buffering = 4096
 
 open_basedir = "/srv/php5/var/tmp/:/srv/php5/var/log/:/srv/webroot/"
 
-disable_functions = "dl,exec,passthru,shell_exec,system,proc_open,popen"
+disable_functions = "dl,exec,shell_exec,popen,proc_open,passthru,system"
 disable_classes =
 
 ;;;;;;;;;;;;;;;;;
