--- a/builder/profile/Debian/nginx/etc/nginx.conf
+++ b/builder/profile/Debian/nginx/etc/nginx.conf
@@ -8,12 +8,10 @@ error_log var/log/error.log crit;
 
 pid var/run/nginx.pid;
 
-include module/*.inc;
-
 events {
 
-    worker_connections 65535;
     use epoll;
+    worker_connections 65535;
 
 }
 
@@ -40,7 +38,9 @@ http {
 
     keepalive_timeout 65;
 
-    include common/*.inc;
-    include server/*.inc;
+    include http.d/*.conf;
+    include vhost.d/*.conf;
 
 }
+
+include extra/*.conf;
