--- a/builder/profile/Debian/nginx/etc/nginx.conf
+++ b/builder/profile/Debian/nginx/etc/nginx.conf
@@ -2,6 +2,7 @@
 user www-data www-data;
 
 worker_processes auto;
+worker_cpu_affinity auto;
 worker_rlimit_nofile 102400;
 
 error_log var/log/error.log crit;
@@ -17,11 +18,12 @@ events {
 
 http {
 
-    server_tokens off;
-
     include mime.types;
+
     types_hash_max_size 2048;
     default_type application/octet-stream;
+
+    server_tokens off;
 
     log_format main
         '$remote_addr - $remote_user [$time_local] '
