update default config files

--- a/builder/profile/Debian/php7/etc/fpm.d/default.conf
+++ b/builder/profile/Debian/php7/etc/fpm.d/default.conf
@@ -6,7 +6,7 @@
 
 ; Per pool prefix
 
-prefix = /srv/php5/var
+prefix = /srv/php7/var
 
 ; Unix user/group of processes
 
@@ -35,15 +35,15 @@ pm.max_requests = 10240
 ; The URI to view the FPM status page. If this value is not set, no URI will be
 ; recognized as a status page.
 
-pm.status_path = /status/php5/$pool
+pm.status_path = /status/$pool.php7
 
 ; The access log file
 
-;access.log = log/$pool.access.log
+;access.log = /srv/webroot/$pool/log/fpm_access.log
 
 ; The log file for slow requests
 
-slowlog = log/$pool.slow.log
+slowlog = /srv/webroot/$pool/log/fpm_slow.log
 
 ; The timeout for serving a single request after which a PHP backtrace will be
 ; dumped to the 'slowlog' file.
@@ -58,7 +58,7 @@ request_terminate_timeout = 0
 ; Pass environment variables like LD_LIBRARY_PATH. All $VARIABLEs are taken from
 ; the current environment.
 
-env[PATH] = /srv/webox/bin:/usr/bin:/bin
+env[PATH] = /usr/local/bin:/usr/bin:/bin
 
 ; Additional php.ini defines, specific to this pool of workers. These settings
 ; overwrite the values previously defined in the php.ini.
@@ -66,9 +66,9 @@ env[PATH] = /srv/webox/bin:/usr/bin:/bin
 php_admin_value[disable_functions] = "dl,exec,shell_exec,popen,proc_open,passthru,system"
 
 php_admin_value[open_basedir]      = /srv/webroot/$pool/
-php_admin_value[sys_temp_dir]      = /srv/webroot/$pool/var
-php_admin_value[upload_tmp_dir]    = /srv/webroot/$pool/var/upload
-php_admin_value[session.save_path] = /srv/webroot/$pool/var/session
+php_admin_value[sys_temp_dir]      = /srv/webroot/$pool/temp
+php_admin_value[upload_tmp_dir]    = /srv/webroot/$pool/temp
+php_admin_value[session.save_path] = /srv/webroot/$pool/session
 
-php_admin_value[error_log] = /srv/webroot/$pool/var/php_error.log
-php_admin_value[mail.log]  = /srv/webroot/$pool/var/php_mail.log
+php_admin_value[error_log] = /srv/webroot/$pool/log/php_error.log
+php_admin_value[mail.log]  = /srv/webroot/$pool/log/php_mail.log
