--- a/builder/profile/Debian/php7/etc/php-fpm.conf
+++ b/builder/profile/Debian/php7/etc/php-fpm.conf
@@ -1,16 +1,9 @@
-;;;;;;;;;;;;;;;;;;;;;
-; FPM Configuration ;
-;;;;;;;;;;;;;;;;;;;;;
-
-; All relative paths in this configuration file are relative to PHP's install
-; prefix (/srv/php7). This prefix can be dynamically changed by using the
-; '-p' argument from the command line.
-
 ;;;;;;;;;;;;;;;;;;
 ; Global Options ;
 ;;;;;;;;;;;;;;;;;;
 
 [global]
+
 ; Pid file
 ; Note: the default prefix is /srv/php7/var
 ; Default Value: none
@@ -39,7 +32,7 @@ error_log = log/fpm.log
 ; Log level
 ; Possible Values: alert, error, warning, notice, debug
 ; Default Value: notice
-;log_level = notice
+log_level = warning
 
 ; If this number of child processes exit with SIGSEGV or SIGBUS within the time
 ; interval set by emergency_restart_interval then FPM will restart. A value
@@ -66,7 +59,7 @@ error_log = log/fpm.log
 ; Use it with caution.
 ; Note: A value of 0 indicates no limit
 ; Default Value: 0
-; process.max = 128
+process.max = 256
 
 ; Specify the nice(2) priority to apply to the master process (only if set)
 ; The value can vary from -19 (highest priority) to 20 (lowest priority)
@@ -122,4 +115,4 @@ error_log = log/fpm.log
 ; Relative path can also be used. They will be prefixed by:
 ;  - the global prefix if it's been set (-p argument)
 ;  - /srv/php7 otherwise
-include=etc/fpm.d/*.inc
+include=etc/fpm.d/*.conf
