--- a/builder/profile/MacOS/nginx/etc/nginx.conf
+++ b/builder/profile/MacOS/nginx/etc/nginx.conf
@@ -2,28 +2,28 @@
 user _www _www;
 
 worker_processes auto;
+worker_cpu_affinity auto;
 worker_rlimit_nofile 102400;
 
 error_log var/log/error.log crit;
 
 pid var/run/nginx.pid;
 
-include module/*.inc;
-
 events {
 
-    worker_connections 65535;
     use kqueue;
+    worker_connections 65535;
 
 }
 
 http {
 
-    server_tokens off;
-
     include mime.types;
+
     types_hash_max_size 2048;
     default_type application/octet-stream;
+
+    server_tokens off;
 
     log_format main
         '$remote_addr - $remote_user [$time_local] '
@@ -40,7 +40,9 @@ http {
 
     keepalive_timeout 65;
 
-    include common/*.inc;
-    include server/*.inc;
+    include http.d/*.conf;
+    include vhost.d/*.conf;
 
 }
+
+include extra/*.conf;
