--- a/builder/profile/MacOS/nginx/etc/http.d/15.proxy.conf
+++ b/builder/profile/MacOS/nginx/etc/http.d/15.proxy.conf
@@ -11,8 +11,6 @@ proxy_connect_timeout 30;
 proxy_read_timeout 180;
 proxy_send_timeout 180;
 
-proxy_cache_path /srv/nginx/var/tmp/proxy_cache levels=1:2 keys_zone=proxy_cache:250m max_size=500m inactive=1d;
-
 ##
 # header
 ##
@@ -21,3 +19,9 @@ proxy_set_header Host $host;
 proxy_set_header X-Forwarded-Proto $scheme;
 proxy_set_header X-Forwarded-Port $remote_port;
 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+##
+# cache store
+##
+
+proxy_cache_path /srv/nginx/var/tmp/proxy_cache levels=1:2 keys_zone=proxy_cache:250m max_size=500m inactive=1d;
