--- a/builder/profile/MacOS/nginx/etc/vhost.d/default.conf
+++ b/builder/profile/MacOS/nginx/etc/vhost.d/default.conf
@@ -9,7 +9,7 @@ server {
         rewrite ^/?(.*)$ http://www.$host/$1 last;
     }
     if ($host ~* ([^\.]+)\.([^\.]+)\.([a-z]+)$) {
-        set $sitedir $pooldir/$3.$2/$1;
+        set $sitedir $pooldir/$3.$2.$1;
     }
 
     if (!-d $sitedir) {
@@ -20,8 +20,8 @@ server {
     index index.php index.htm index.html;
     try_files $uri $uri/ /index.php$is_args$args;
 
-    include common/21.server_status;
-    include common/22.server_error_page;
-    include common/25.server_fastcgi_php7;
+    include http.d/21.server_status;
+    include http.d/22.server_error_page;
+    include http.d/25.server_fastcgi_php7;
 
 }
