--- a/builder/profile/MacOS/php7/etc/php.ini
+++ b/builder/profile/MacOS/php7/etc/php.ini
@@ -14,11 +14,7 @@ user_ini.cache_ttl = 600
 
 short_open_tag = Off
 
-precision = 14
-
 output_buffering = 4096
-
-open_basedir = "/srv/php7/var/tmp/:/srv/php7/var/log/:/srv/webroot/"
 
 ;;;;;;;;;;;;;;;;;
 ; Miscellaneous ;
@@ -47,7 +43,8 @@ display_errors = Off
 display_startup_errors = Off
 
 log_errors = On
-track_errors = Off
+log_errors_max_len = 1024
+
 html_errors = Off
 
 error_log = "/srv/php7/var/log/error.log"
@@ -57,9 +54,10 @@ error_log = "/srv/php7/var/log/error.log"
 ;;;;;;;;;;;;;;;;;
 
 variables_order = "GPCS"
-
 request_order = "GP"
+
 register_argc_argv = Off
+auto_globals_jit = On
 
 post_max_size = 30M
 
@@ -71,31 +69,17 @@ include_path = "."
 
 sys_temp_dir = "/srv/php7/var/tmp"
 
-enable_dl = Off
-
-cgi.force_redirect = 1
-cgi.fix_pathinfo = 0
-
 ;;;;;;;;;;;;;;;;
 ; File Uploads ;
 ;;;;;;;;;;;;;;;;
 
 file_uploads = On
 
-upload_tmp_dir = "/srv/php7/var/tmp/upload"
+upload_tmp_dir = "/srv/php7/var/tmp"
 
 upload_max_filesize = 20M
 
 max_file_uploads = 20
-
-;;;;;;;;;;;;;;;;;;
-; Fopen wrappers ;
-;;;;;;;;;;;;;;;;;;
-
-allow_url_fopen = On
-allow_url_include = Off
-
-default_socket_timeout = 60
 
 ;;;;;;;;;;;;;;;;;;;
 ; Module Settings ;
@@ -107,37 +91,22 @@ date.timezone = "Asia/Shanghai"
 
 [Pdo_mysql]
 
-pdo_mysql.cache_size = 2000
-pdo_mysql.default_socket = "/srv/mysql/var/run/mysql.sock"
+pdo_mysql.default_socket = "/srv/mysql/var/run/mysqld.sock"
 
 [mail function]
-
-;sendmail_path = "sendmail -t -i"
 
 mail.add_x_header = Off
 mail.log = "/srv/php7/var/log/mail.log"
 
 [MySQLi]
 
-mysqli.allow_local_infile = On
-mysqli.allow_persistent = On
-
-mysqli.default_socket = "/srv/mysql/var/run/mysql.sock"
+mysqli.default_socket = "/srv/mysql/var/run/mysqld.sock"
 
 [Session]
 
-session.save_path = "/srv/php7/var/tmp/session"
-
-session.name = WEBOXSID
+session.save_path = "/srv/php7/var/session"
 
 session.gc_probability = 5
 session.gc_divisor = 1000
 
-session.hash_bits_per_character = 5
-
-url_rewriter.tags = "a=href,area=href,frame=src,input=src,form=fakeentry"
-
-[mbstring]
-
-;mbstring.http_input =
-;mbstring.http_output =
+session.sid_bits_per_character = 5
