--- a/builder/profile/MacOS/nginx/etc/vhost.d/default.conf
+++ b/builder/profile/MacOS/nginx/etc/vhost.d/default.conf
@@ -3,7 +3,7 @@ server {
     listen 80 default_server;
 
     set $pool default;
-    set $pooldir /srv/webroot/$pool;
+    set $pooldir /srv/www/$pool;
 
     if ($host ~ ^([^\.]+)\.([^\.]+)$) {
         rewrite ^/?(.*)$ http://www.$host/$1 last;
