--- a/builder/profile/MacOS/php7/etc/fpm.d/default.conf
+++ b/builder/profile/MacOS/php7/etc/fpm.d/default.conf
@@ -39,11 +39,11 @@ pm.status_path = /status/$pool.php7
 
 ; The access log file
 
-;access.log = /srv/webroot/$pool/log/fpm_access.log
+;access.log = /srv/www/$pool/log/fpm_access.log
 
 ; The log file for slow requests
 
-slowlog = /srv/webroot/$pool/log/fpm_slow.log
+slowlog = /srv/www/$pool/log/fpm_slow.log
 
 ; The timeout for serving a single request after which a PHP backtrace will be
 ; dumped to the 'slowlog' file.
@@ -65,10 +65,10 @@ env[PATH] = /usr/local/bin:/usr/bin:/bin
 
 php_admin_value[disable_functions] = "dl,exec,shell_exec,popen,proc_open,passthru,system"
 
-php_admin_value[open_basedir]      = /srv/webroot/$pool/
-php_admin_value[sys_temp_dir]      = /srv/webroot/$pool/temp
-php_admin_value[upload_tmp_dir]    = /srv/webroot/$pool/temp
-php_admin_value[session.save_path] = /srv/webroot/$pool/session
+php_admin_value[open_basedir]      = /srv/www/$pool/
+php_admin_value[sys_temp_dir]      = /srv/www/$pool/temp
+php_admin_value[upload_tmp_dir]    = /srv/www/$pool/temp
+php_admin_value[session.save_path] = /srv/www/$pool/session
 
-php_admin_value[error_log] = /srv/webroot/$pool/log/php_error.log
-php_admin_value[mail.log]  = /srv/webroot/$pool/log/php_mail.log
+php_admin_value[error_log] = /srv/www/$pool/log/php_error.log
+php_admin_value[mail.log]  = /srv/www/$pool/log/php_mail.log
