--- a/builder/profile/MacOS/nginx/etc/http.d/12.gzip.conf
+++ b/builder/profile/MacOS/nginx/etc/http.d/12.gzip.conf
@@ -14,4 +14,4 @@ gzip_http_version 1.1;
 gzip_disable "MSIE [1-6]\.";
 gzip_min_length 1000;
 
-gzip_types text/plain text/html text/css text/xml application/javascript application/json image/svg+xml;
+gzip_types text/css text/xml text/plain application/javascript application/json image/svg+xml;
