--- a/builder/profile/Debian/webox/nginx/etc/vhost.d/default.conf
+++ b/builder/profile/Debian/webox/nginx/etc/vhost.d/default.conf
@@ -9,11 +9,11 @@ server {
         rewrite ^/?(.*)$ http://www.$host/$1 last;
     }
     if ($host ~* ([^\.]+)\.([^\.]+)\.([a-z]+)$) {
-        set $sitedir $pooldir/$3.$2.$1;
+        set $sitedir $pooldir/webapp/$3.$2.$1;
     }
 
     if (!-d $sitedir) {
-        set $sitedir $pooldir/sample;
+        set $sitedir $pooldir/errpage;
     }
 
     root  $sitedir;
