更改session默认路径

--- a/builder/profile/Debian/webox/php5/etc/fpm.d/default.conf
+++ b/builder/profile/Debian/webox/php5/etc/fpm.d/default.conf
@@ -58,7 +58,7 @@ request_terminate_timeout = 0
 ; Pass environment variables like LD_LIBRARY_PATH. All $VARIABLEs are taken from
 ; the current environment.
 
-env[PATH] = /usr/local/bin:/usr/bin:/bin
+env[PATH] = /srv/bin:/usr/bin:/bin
 
 ; Additional php.ini defines, specific to this pool of workers. These settings
 ; overwrite the values previously defined in the php.ini.
@@ -68,7 +68,7 @@ php_admin_value[disable_functions] = "dl,exec,shell_exec,popen,proc_open,passthr
 php_admin_value[open_basedir]      = /srv/htdoc/$pool/
 php_admin_value[sys_temp_dir]      = /srv/htdoc/$pool/temp
 php_admin_value[upload_tmp_dir]    = /srv/htdoc/$pool/temp
-php_admin_value[session.save_path] = /srv/htdoc/$pool/session
+php_admin_value[session.save_path] = /srv/htdoc/$pool/temp/session
 
 php_admin_value[error_log] = /srv/htdoc/$pool/log/php_error.log
 php_admin_value[mail.log]  = /srv/htdoc/$pool/log/php_mail.log
