--- a/builder/profile/Debian/webox/mysql/etc/my.cnf
+++ b/builder/profile/Debian/webox/mysql/etc/my.cnf
@@ -3,7 +3,7 @@
 
 [client]
 
-socket = /srv/wbapp/var/run/mysql/mysqld.sock
+socket = ${wbapp}/var/run/mysql/mysqld.sock
 
 [mysqld]
 
@@ -15,15 +15,15 @@ explicit_defaults_for_timestamp
 #
 
 user              = mysql
-pid_file          = /srv/wbapp/var/run/mysql/mysqld.pid
-socket            = /srv/wbapp/var/run/mysql/mysqld.sock
+pid_file          = ${wbapp}/var/run/mysql/mysqld.pid
+socket            = ${wbapp}/var/run/mysql/mysqld.sock
 
 port              = 3306
 bind_address      = 127.0.0.1
 
-basedir           = /srv/wbapp
-datadir           = /srv/wbapp/var/lib/mysql
-tmpdir            = /srv/wbapp/var/tmp/mysql
+basedir           = ${wbapp}
+datadir           = ${wbapp}/var/lib/mysql
+tmpdir            = ${wbapp}/var/tmp/mysql
 
 #
 # * Fine Tuning
@@ -37,17 +37,17 @@ sql_mode = STRICT_TRANS_TABLES,NO_AUTO_CREATE_USER,NO_ENGINE_SUBSTITUTION
 # * Logging
 #
 
-log_error           = /srv/wbapp/var/log/mysql/error.log
+log_error           = ${wbapp}/var/log/mysql/error.log
 
 general_log         = 0
-general_log_file    = /srv/wbapp/var/log/mysql/mysql.log
+general_log_file    = ${wbapp}/var/log/mysql/mysql.log
 
 slow_query_log
-slow_query_log_file = /srv/wbapp/var/log/mysql/slow.log
+slow_query_log_file = ${wbapp}/var/log/mysql/slow.log
 long_query_time     = 30
 
 #
 # * IMPORTANT: Additional settings that can override those from this file!
 #
 
-!includedir /srv/wbapp/etc/mysql/conf.d/
+!includedir ${wbapp}/etc/mysql/conf.d/
