--- a/builder/profile/Debian/webox/php7/etc/fpm.conf
+++ b/builder/profile/Debian/webox/php7/etc/fpm.conf
@@ -3,7 +3,7 @@
 ;;;;;;;;;;;;;;;;;;;;;
 
 ; All relative paths in this configuration file are relative to PHP's install
-; prefix (/srv/wbapp). This prefix can be dynamically changed by using the
+; prefix (${wbapp}). This prefix can be dynamically changed by using the
 ; '-p' argument from the command line.
 
 ;;;;;;;;;;;;;;;;;;
@@ -13,14 +13,14 @@
 [global]
 
 ; Pid file
-; Note: the default prefix is /srv/wbapp/var
+; Note: the default prefix is ${wbapp}/var
 ; Default Value: none
 pid = run/php7/fpm.pid
 
 ; Error log file
 ; If it's set to "syslog", log is sent to syslogd instead of being written
 ; into a local file.
-; Note: the default prefix is /srv/wbapp/var
+; Note: the default prefix is ${wbapp}/var
 ; Default Value: log/php-fpm.log
 error_log = log/php7/fpm.log
 
@@ -140,5 +140,5 @@ process.max = 256
 ; file.
 ; Relative path can also be used. They will be prefixed by:
 ;  - the global prefix if it's been set (-p argument)
-;  - /srv/wbapp otherwise
+;  - ${wbapp} otherwise
 include=etc/php7/fpm.d/*.conf
