--- a/builder/profile/Debian/webox/redis/etc/sentinel.conf
+++ b/builder/profile/Debian/webox/redis/etc/sentinel.conf
@@ -47,7 +47,7 @@ port 26379
 # For Redis Sentinel to chdir to /tmp at startup is the simplest thing
 # for the process to don't interfere with administrative tasks such as
 # unmounting filesystems.
-dir /srv/wbapp/var/tmp/redis
+dir ${wbapp}/var/tmp/redis
 
 # sentinel monitor <master-name> <ip> <redis-port> <quorum>
 #
