--- a/builder/profile/MacOS/webox/php5/etc/fpm.conf
+++ b/builder/profile/MacOS/webox/php5/etc/fpm.conf
@@ -5,14 +5,14 @@
 [global]
 
 ; Pid file
-; Note: the default prefix is /srv/wbapp/var
+; Note: the default prefix is ${wbapp}/var
 ; Default Value: none
 pid = run/php5/fpm.pid
 
 ; Error log file
 ; If it's set to "syslog", log is sent to syslogd instead of being written
 ; into a local file.
-; Note: the default prefix is /srv/wbapp/var
+; Note: the default prefix is ${wbapp}/var
 ; Default Value: log/php-fpm.log
 error_log = log/php5/fpm.log
 
@@ -114,5 +114,5 @@ process.max = 256
 ; file.
 ; Relative path can also be used. They will be prefixed by:
 ;  - the global prefix if it's been set (-p argument)
-;  - /srv/wbapp otherwise
+;  - ${wbapp} otherwise
 include=etc/php5/fpm.d/*.conf
