--- a/builder/profile/Debian/webox/php5/etc/php.ini
+++ b/builder/profile/Debian/webox/php5/etc/php.ini
@@ -47,7 +47,7 @@ log_errors_max_len = 1024
 
 html_errors = Off
 
-error_log = "/srv/wbapp/var/log/php5/error.log"
+error_log = "${wbapp}/var/log/php5/error.log"
 
 ;;;;;;;;;;;;;;;;;
 ; Data Handling ;
@@ -67,7 +67,7 @@ post_max_size = 30M
 
 include_path = "."
 
-sys_temp_dir = "/srv/wbapp/var/tmp/php5"
+sys_temp_dir = "${wbapp}/var/tmp/php5"
 
 ;;;;;;;;;;;;;;;;
 ; File Uploads ;
@@ -75,7 +75,7 @@ sys_temp_dir = "/srv/wbapp/var/tmp/php5"
 
 file_uploads = On
 
-upload_tmp_dir = "/srv/wbapp/var/tmp/php5"
+upload_tmp_dir = "${wbapp}/var/tmp/php5"
 
 upload_max_filesize = 20M
 
@@ -91,24 +91,24 @@ date.timezone = "Asia/Shanghai"
 
 [Pdo_mysql]
 
-pdo_mysql.default_socket = "/srv/wbapp/var/run/mysql/mysqld.sock"
+pdo_mysql.default_socket = "${wbapp}/var/run/mysql/mysqld.sock"
 
 [mail function]
 
 mail.add_x_header = Off
-mail.log = "/srv/wbapp/var/log/php5/mail.log"
+mail.log = "${wbapp}/var/log/php5/mail.log"
 
 [MySQL]
 
-mysql.default_socket = "/srv/wbapp/var/run/mysql/mysqld.sock"
+mysql.default_socket = "${wbapp}/var/run/mysql/mysqld.sock"
 
 [MySQLi]
 
-mysqli.default_socket = "/srv/wbapp/var/run/mysql/mysqld.sock"
+mysqli.default_socket = "${wbapp}/var/run/mysql/mysqld.sock"
 
 [Session]
 
-session.save_path = "/srv/wbapp/var/tmp/php5"
+session.save_path = "${wbapp}/var/tmp/php5"
 
 session.gc_probability = 5
 session.gc_divisor = 1000
