--- a/builder/profile/MacOS/webox/php7/etc/fpm.d/default.conf
+++ b/builder/profile/MacOS/webox/php7/etc/fpm.d/default.conf
@@ -6,7 +6,7 @@
 
 ; Per pool prefix
 
-prefix = /srv/wbapp
+prefix = ${wbapp}
 
 ; Unix user/group of processes
 
@@ -39,11 +39,11 @@ pm.status_path = /status/$pool.php7
 
 ; The access log file
 
-;access.log = /srv/htdoc/$pool/log/fpm_access.log
+;access.log = ${htdoc}/$pool/log/fpm_access.log
 
 ; The log file for slow requests
 
-slowlog = /srv/htdoc/$pool/log/fpm_slow.log
+slowlog = ${htdoc}/$pool/log/fpm_slow.log
 
 ; The timeout for serving a single request after which a PHP backtrace will be
 ; dumped to the 'slowlog' file.
@@ -65,10 +65,10 @@ env[PATH] = /srv/bin:/usr/bin:/bin
 
 php_admin_value[disable_functions] = "dl,exec,shell_exec,popen,proc_open,passthru,system"
 
-php_admin_value[open_basedir]      = /srv/htdoc/$pool/
-php_admin_value[sys_temp_dir]      = /srv/htdoc/$pool/temp
-php_admin_value[upload_tmp_dir]    = /srv/htdoc/$pool/temp
-php_admin_value[session.save_path] = /srv/htdoc/$pool/temp/session
+php_admin_value[open_basedir]      = ${htdoc}/$pool/
+php_admin_value[sys_temp_dir]      = ${htdoc}/$pool/temp
+php_admin_value[upload_tmp_dir]    = ${htdoc}/$pool/temp
+php_admin_value[session.save_path] = ${htdoc}/$pool/temp/session
 
-php_admin_value[error_log] = /srv/htdoc/$pool/log/php_error.log
-php_admin_value[mail.log]  = /srv/htdoc/$pool/log/php_mail.log
+php_admin_value[error_log] = ${htdoc}/$pool/log/php_error.log
+php_admin_value[mail.log]  = ${htdoc}/$pool/log/php_mail.log
