--- a/builder/profile/MacOS/webox/php7/etc/php.ini
+++ b/builder/profile/MacOS/webox/php7/etc/php.ini
@@ -47,7 +47,7 @@ log_errors_max_len = 1024
 
 html_errors = Off
 
-error_log = "/srv/wbapp/var/log/php7/error.log"
+error_log = "${wbapp}/var/log/php7/error.log"
 
 ;;;;;;;;;;;;;;;;;
 ; Data Handling ;
@@ -67,7 +67,7 @@ post_max_size = 30M
 
 include_path = "."
 
-sys_temp_dir = "/srv/wbapp/var/tmp/php7"
+sys_temp_dir = "${wbapp}/var/tmp/php7"
 
 ;;;;;;;;;;;;;;;;
 ; File Uploads ;
@@ -75,7 +75,7 @@ sys_temp_dir = "/srv/wbapp/var/tmp/php7"
 
 file_uploads = On
 
-upload_tmp_dir = "/srv/wbapp/var/tmp/php7"
+upload_tmp_dir = "${wbapp}/var/tmp/php7"
 
 upload_max_filesize = 20M
 
@@ -91,20 +91,20 @@ date.timezone = "Asia/Shanghai"
 
 [Pdo_mysql]
 
-pdo_mysql.default_socket = "/srv/wbapp/var/run/mysql/mysqld.sock"
+pdo_mysql.default_socket = "${wbapp}/var/run/mysql/mysqld.sock"
 
 [mail function]
 
 mail.add_x_header = Off
-mail.log = "/srv/wbapp/var/log/php7/mail.log"
+mail.log = "${wbapp}/var/log/php7/mail.log"
 
 [MySQLi]
 
-mysqli.default_socket = "/srv/wbapp/var/run/mysql/mysqld.sock"
+mysqli.default_socket = "${wbapp}/var/run/mysql/mysqld.sock"
 
 [Session]
 
-session.save_path = "/srv/wbapp/var/tmp/php7"
+session.save_path = "${wbapp}/var/tmp/php7"
 
 session.gc_probability = 5
 session.gc_divisor = 1000
