--- a/builder/profile/MacOS/webox/redis/etc/conf.d/server.conf
+++ b/builder/profile/MacOS/webox/redis/etc/conf.d/server.conf
@@ -76,7 +76,7 @@ tcp-backlog 511
 # incoming connections. There is no default, so Redis will not listen
 # on a unix socket when not specified.
 #
-# unixsocket /srv/wbapp/var/run/redis/redis.sock
+# unixsocket ${wbapp}/var/run/redis/redis.sock
 # unixsocketperm 700
 
 # Close the connection after a client is idle for N seconds (0 to disable)
@@ -125,7 +125,7 @@ supervised no
 #
 # Creating a pid file is best effort: if Redis is not able to create it
 # nothing bad happens, the server will start and run normally.
-pidfile /srv/wbapp/var/run/redis/redis.pid
+pidfile ${wbapp}/var/run/redis/redis.pid
 
 # Specify the server verbosity level.
 # This can be one of:
@@ -138,7 +138,7 @@ loglevel notice
 # Specify the log file name. Also the empty string can be used to force
 # Redis to log on the standard output. Note that if you use standard
 # output for logging but daemonize, logs will be sent to /dev/null
-logfile /srv/wbapp/var/log/redis/redis.log
+logfile ${wbapp}/var/log/redis/redis.log
 
 # To enable logging to the system logger, just set 'syslog-enabled' to yes,
 # and optionally update the other syslog parameters to suit your needs.
@@ -222,7 +222,7 @@ dbfilename dump.rdb
 # The Append Only File will also be created inside this directory.
 #
 # Note that you must specify a directory here, not a file name.
-dir /srv/wbapp/var/tmp/redis
+dir ${wbapp}/var/tmp/redis
 
 ################################# REPLICATION #################################
 
