--- a/builder/profile/MacOS/webox/redis/etc/redis.conf
+++ b/builder/profile/MacOS/webox/redis/etc/redis.conf
@@ -1,7 +1,7 @@
 # Note that in order to read the configuration file, Redis must be
 # started with the file path as first argument:
 #
-# ./redis-server /srv/wbapp/etc/redis/redis.conf
+# ./redis-server ${wbapp}/etc/redis/redis.conf
 
 ################################## INCLUDES ###################################
 
@@ -19,5 +19,5 @@
 # options, it is better to use include as the last line.
 #
 
-include /srv/wbapp/etc/redis/conf.d/server.conf
-include /srv/wbapp/etc/redis/conf.d/useful.conf
+include ${wbapp}/etc/redis/conf.d/server.conf
+include ${wbapp}/etc/redis/conf.d/useful.conf
