修复变量模板

--- a/builder/profile/MacOS/webox/php5/etc/fpm.conf
+++ b/builder/profile/MacOS/webox/php5/etc/fpm.conf
@@ -1,3 +1,11 @@
+;;;;;;;;;;;;;;;;;;;;;
+; FPM Configuration ;
+;;;;;;;;;;;;;;;;;;;;;
+
+; All relative paths in this configuration file are relative to PHP's install
+; prefix (${wbapp}). This prefix can be dynamically changed by using the
+; '-p' argument from the command line.
+
 ;;;;;;;;;;;;;;;;;;
 ; Global Options ;
 ;;;;;;;;;;;;;;;;;;
