--- a/builder/profile/MacOS/webox/nginx/etc/vhost.d/default.conf
+++ b/builder/profile/MacOS/webox/nginx/etc/vhost.d/default.conf
@@ -13,7 +13,7 @@ server {
     }
 
     if (!-d $sitedir) {
-        set $sitedir $pooldir/not;
+        set $sitedir $pooldir/miss;
     }
 
     root  $sitedir;
