优化配置文件结构

--- a/builder/profile/Darwin/webox/php5/etc/php-fpm.conf
+++ b/builder/profile/Darwin/webox/php5/etc/php-fpm.conf
@@ -123,4 +123,4 @@ process.max = 256
 ; Relative path can also be used. They will be prefixed by:
 ;  - the global prefix if it's been set (-p argument)
 ;  - ${wbapp} otherwise
-include=etc/php5/fpm.d/*.conf
+include=etc/php5/pool.d/*.conf
