--- a/builder/profile/Linux/webox/php7/etc/php-fpm.conf
+++ b/builder/profile/Linux/webox/php7/etc/php-fpm.conf
@@ -15,14 +15,14 @@
 ; Pid file
 ; Note: the default prefix is ${wbapp}/var
 ; Default Value: none
-pid = run/php5/fpm.pid
+pid = run/php7/fpm.pid
 
 ; Error log file
 ; If it's set to "syslog", log is sent to syslogd instead of being written
 ; into a local file.
 ; Note: the default prefix is ${wbapp}/var
 ; Default Value: log/php-fpm.log
-error_log = log/php5/fpm.log
+error_log = log/php7/fpm.log
 
 ; syslog_facility is used to specify what type of program is logging the
 ; message. This lets syslogd specify that messages from different facilities
@@ -41,6 +41,24 @@ error_log = log/php5/fpm.log
 ; Possible Values: alert, error, warning, notice, debug
 ; Default Value: notice
 log_level = warning
+
+; Log limit on number of characters in the single line (log entry). If the
+; line is over the limit, it is wrapped on multiple lines. The limit is for
+; all logged characters including message prefix and suffix if present. However
+; the new line character does not count into it as it is present only when
+; logging to a file descriptor. It means the new line character is not present
+; when logging to syslog.
+; Default Value: 1024
+;log_limit = 4096
+
+; Log buffering specifies if the log line is buffered which means that the
+; line is written in a single write operation. If the value is false, then the
+; data is written directly into the file descriptor. It is an experimental
+; option that can potentionaly improve logging performance and memory usage
+; for some heavy logging scenarios. This option is ignored if logging to syslog
+; as it has to be always buffered.
+; Default value: yes
+;log_buffering = no
 
 ; If this number of child processes exit with SIGSEGV or SIGBUS within the time
 ; interval set by emergency_restart_interval then FPM will restart. A value
@@ -123,4 +141,4 @@ process.max = 256
 ; Relative path can also be used. They will be prefixed by:
 ;  - the global prefix if it's been set (-p argument)
 ;  - ${wbapp} otherwise
-include=etc/php5/fpm.d/*.conf
+include=etc/php7/pool.d/*.conf
