更改默认缓存容量

--- a/builder/profile/Darwin/webox/nginx/etc/http.d/15.proxy.conf
+++ b/builder/profile/Darwin/webox/nginx/etc/http.d/15.proxy.conf
@@ -24,4 +24,4 @@ proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 # cache store
 ##
 
-proxy_cache_path ${wbapp}/var/tmp/nginx/proxy_cache levels=1:2 keys_zone=proxy_cache:250m max_size=500m inactive=1d;
+proxy_cache_path ${wbapp}/var/tmp/nginx/proxy_cache levels=1:2 keys_zone=proxy_cache:32m max_size=4g inactive=7d;
