--- a/builder/profile/Linux/webox/nginx/etc/nginx.conf
+++ b/builder/profile/Linux/webox/nginx/etc/nginx.conf
@@ -11,7 +11,7 @@ pid var/run/nginx/nginx.pid;
 
 pcre_jit on;
 
-include extra/*.conf;
+include global/*.conf;
 
 events {
 
@@ -36,7 +36,7 @@ http {
     ;
 
     access_log off;
-    #access_log var/log/nginx/access.log main;
+   #access_log var/log/nginx/access.log main;
 
     sendfile on;
     tcp_nopush on;
