独立脚本不再声明变量作用域

--- a/builder/Declare/basefs/app/php/etc/pool.d/default.conf
+++ b/builder/Declare/basefs/app/php/etc/pool.d/default.conf
@@ -13,7 +13,7 @@ prefix = ${whome}
 user = daemon
 group = daemon
 
-listen = var/run/php/$pool.sock
+listen = ${whome}/var/run/php/$pool.sock
 
 ; Set permissions for unix socket, if one is used.
 
@@ -39,11 +39,11 @@ pm.status_path = /status/$pool
 
 ; The access log file
 
-;access.log = ${htdoc}/$pool/log/fpm_access.log
+;access.log = ${whome}/var/log/php/$pool_access.log
 
 ; The log file for slow requests
 
-slowlog = ${htdoc}/$pool/log/fpm_slow.log
+slowlog = ${whome}/var/log/php/$pool_slow.log
 
 ; The timeout for serving a single request after which a PHP backtrace will be
 ; dumped to the 'slowlog' file.
@@ -65,10 +65,11 @@ env[PATH] = ${whome}/bin:/usr/bin:/bin
 
 php_admin_value[disable_functions] = "dl,exec,shell_exec,popen,proc_open,passthru,system"
 
-php_admin_value[open_basedir]      = ${htdoc}/$pool/
-php_admin_value[sys_temp_dir]      = ${htdoc}/$pool/temp
-php_admin_value[upload_tmp_dir]    = ${htdoc}/$pool/temp
-php_admin_value[session.save_path] = ${htdoc}/$pool/temp/session
+php_admin_value[open_basedir]      = ${whome}/var/tmp/php/$pool:${htdoc}/$pool/
 
-php_admin_value[error_log] = ${htdoc}/$pool/log/php_error.log
-php_admin_value[mail.log]  = ${htdoc}/$pool/log/php_mail.log
+php_admin_value[sys_temp_dir]      = ${whome}/var/tmp/php/$pool
+php_admin_value[upload_tmp_dir]    = ${whome}/var/tmp/php/$pool/upload
+php_admin_value[session.save_path] = ${whome}/var/tmp/php/$pool/session
+
+php_admin_value[error_log]         = ${whome}/var/log/php/$pool_error.log
+php_admin_value[mail.log]          = ${whome}/var/log/php/$pool_mail.log
