--- a/builder/Declare/basefs/app/nginx/etc/nginx.conf
+++ b/builder/Declare/basefs/app/nginx/etc/nginx.conf
@@ -32,7 +32,7 @@ http {
     ;
 
     access_log off;
-   #access_log ${whome}/var/log/nginx/access.log main;
+  # access_log ${whome}/var/log/nginx/$host.log main;
 
     sendfile on;
     tcp_nopush on;
