优化站点配置

--- a/builder/Declare/basefs/app/nginx/etc/http.d/11.base.conf
+++ b/builder/Declare/basefs/app/nginx/etc/http.d/11.base.conf
@@ -1,5 +1,5 @@
 ##
-# Base Config
+# Base - Config
 ##
 
 server_names_hash_bucket_size 128;
@@ -21,3 +21,9 @@ client_max_body_size 30m;
 ssi on;
 ssi_silent_errors on;
 ssi_types text/shtml;
+
+##
+# var
+##
+
+set $safedir "";
