--- a/builder/Declare/basefs/app/php/etc/pool.d/default.conf
+++ b/builder/Declare/basefs/app/php/etc/pool.d/default.conf
@@ -65,7 +65,7 @@ env[PATH] = ${whome}/bin:/usr/bin:/bin
 
 php_admin_value[disable_functions] = "dl,exec,shell_exec,popen,proc_open,passthru,system"
 
-php_admin_value[open_basedir]      = ${whome}/var/tmp/php/$pool:${htdoc}/$pool/
+php_admin_value[open_basedir]      = ${whome}/var/tmp/php/$pool:${htdoc}/$pool
 
 php_admin_value[sys_temp_dir]      = ${whome}/var/tmp/php/$pool
 php_admin_value[upload_tmp_dir]    = ${whome}/var/tmp/php/$pool/upload
