--- a/builder/Declare/basefs/app/nginx/etc/http.d/15.proxy.conf
+++ b/builder/Declare/basefs/app/nginx/etc/http.d/15.proxy.conf
@@ -1,5 +1,5 @@
 ##
-# Proxy Config
+# Proxy - Config
 ##
 
 proxy_buffering on;
@@ -15,10 +15,20 @@ proxy_send_timeout 180;
 # forwarded
 ##
 
+map $http_x_forwarded_proto $x_scheme {
+     default $http_x_forwarded_proto;
+     '' $scheme;
+}
+
+map $http_x_forwarded_proto $x_port {
+     default $http_x_forwarded_port;
+     '' $remote_port;
+}
+
 proxy_set_header Host $host;
-proxy_set_header X-Forwarded-Proto $scheme;
-proxy_set_header X-Forwarded-Port $remote_port;
 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+proxy_set_header X-Forwarded-Proto $x_scheme;
+proxy_set_header X-Forwarded-Port $x_port;
 
 ##
 # websocket
@@ -36,4 +46,4 @@ proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 # cache store
 ##
 
-# proxy_cache_path ${whome}/var/tmp/nginx/proxy_cache levels=1:2 keys_zone=proxy_cache:32m max_size=4g inactive=7d;
+# proxy_cache_path ${whome}/var/tmp/nginx/proxy_cache levels=1:2 keys_zone=proxy_cache:1g max_size=8g inactive=14d;
