--- a/builder/Declare/basefs/app/nginx/etc/vhost.d/default.conf
+++ b/builder/Declare/basefs/app/nginx/etc/vhost.d/default.conf
@@ -10,11 +10,11 @@ server {
         rewrite ^/?(.*)$ http://www.$host/$1 last;
     }
     if ($host ~* ([^\.]+)\.([^\.]+)\.([a-z]+)$) {
-        set $sitedir $pooldir/web/$3.$2.$1;
+        set $sitedir $pooldir/$3.$2.$1;
     }
 
     if (!-d $sitedir) {
-        set $sitedir $pooldir/miss;
+        set $sitedir ${htdoc}/assets;
     }
 
     root  $sitedir;
