修改日志路径

--- a/builder/Declare/basefs/app/php/etc/pool.d/default.conf
+++ b/builder/Declare/basefs/app/php/etc/pool.d/default.conf
@@ -39,11 +39,11 @@ pm.status_path = /status/$pool
 
 ; The access log file
 
-;access.log = ${whome}/var/log/php/$pool_access.log
+;access.log = ${whome}/var/log/php/$pool/access.log
 
 ; The log file for slow requests
 
-slowlog = ${whome}/var/log/php/$pool_slow.log
+slowlog = ${whome}/var/log/php/$pool/slow.log
 
 ; The timeout for serving a single request after which a PHP backtrace will be
 ; dumped to the 'slowlog' file.
@@ -71,5 +71,5 @@ php_admin_value[sys_temp_dir]      = ${whome}/var/tmp/php/$pool
 php_admin_value[upload_tmp_dir]    = ${whome}/var/tmp/php/$pool/upload
 php_admin_value[session.save_path] = ${whome}/var/tmp/php/$pool/session
 
-php_admin_value[error_log]         = ${whome}/var/log/php/$pool_error.log
-php_admin_value[mail.log]          = ${whome}/var/log/php/$pool_mail.log
+php_admin_value[error_log]         = ${whome}/var/log/php/$pool/error.log
+php_admin_value[mail.log]          = ${whome}/var/log/php/$pool/mail.log
