--- a/builder/Declare/basefs/etc/nginx/http.d/15.proxy.conf
+++ b/builder/Declare/basefs/etc/nginx/http.d/15.proxy.conf
@@ -20,7 +20,7 @@ map $http_x_forwarded_proto $x_scheme {
      '' $scheme;
 }
 
-map $http_x_forwarded_proto $x_port {
+map $http_x_forwarded_port $x_port {
      default $http_x_forwarded_port;
      '' $remote_port;
 }
