更新Nginx配置结构

--- a/builder/Declare/basefs/etc/nginx/nginx.conf
+++ b/builder/Declare/basefs/etc/nginx/nginx.conf
@@ -5,10 +5,9 @@ worker_processes 2;
 worker_rlimit_nofile 65535;
 
 error_log ${webox}/var/log/nginx/error.log crit;
-
 pid ${webox}/var/run/nginx/nginx.pid;
 
-include global/*.conf;
+include module/*.conf;
 
 events {
 
@@ -40,7 +39,10 @@ http {
 
     keepalive_timeout 65;
 
-    include http.d/*.conf;
-    include vhost.d/*.conf;
+    # default conf
+    include section/*.conf;
+
+    # virtual host
+    include vhost/*.conf;
 
 }
