--- a/builder/Declare/basefs/etc/nginx/vhost/default.conf
+++ b/builder/Declare/basefs/etc/nginx/vhost/default.conf
@@ -19,10 +19,11 @@ server {
 
     root  $sitedir;
     index index.php index.htm index.html;
-    try_files $uri $uri/ /index.php$is_args$args;
+  # try_files $uri $uri/ /index.php$is_args$args;
 
-    include http.d/server_status;
-    include http.d/server_error_page;
-    include http.d/server_fastcgi_php;
+    include section/server_status;
+    include section/server_error_page;
+
+    include section/server_fastcgi_php;
 
 }
