--- a/builder/Declare/basefs/etc/redis/conf.d/default.conf
+++ b/builder/Declare/basefs/etc/redis/conf.d/default.conf
@@ -27,7 +27,7 @@ logfile ${webox}/var/log/redis/redis.log
 
 databases 16
 
-always-show-logo yes
+always-show-logo no
 
 ################################ SNAPSHOTTING  ################################
 
