--- a/builder/Declare/basefs/etc/nginx/nginx.conf
+++ b/builder/Declare/basefs/etc/nginx/nginx.conf
@@ -42,7 +42,7 @@ http {
     # default conf
     include section/*.conf;
 
-    # virtual host
-    include vhost/*.conf;
+    # virtual server
+    include server/*.conf;
 
 }
