update mysql config

--- a/builder/Declare/basefs/etc/mysql/my.cnf
+++ b/builder/Declare/basefs/etc/mysql/my.cnf
@@ -1,6 +1,6 @@
 [client]
 
-socket = ${webox}/var/run/mysql/mysqld.sock
+socket = ${webox}/var/run/mysql.sock
 
 [mysqld]
 
@@ -13,7 +13,7 @@ explicit_defaults_for_timestamp
 
 user              = daemon
 pid_file          = ${webox}/var/run/mysql/mysqld.pid
-socket            = ${webox}/var/run/mysql/mysqld.sock
+socket            = ${webox}/var/run/mysql.sock
 
 port              = 3306
 bind_address      = 127.0.0.1
