更新配置文件

--- a/builder/Declare/basefs/etc/mysql/my.cnf
+++ b/builder/Declare/basefs/etc/mysql/my.cnf
@@ -1,45 +1,41 @@
-[client]
-
-socket = ${webox}/var/run/mysql.sock
+# The MySQL Server configuration file.
+#
+# For explanations see
+# http://dev.mysql.com/doc/mysql/en/server-system-variables.html
+#
 
 [mysqld]
 
-skip_external_locking
-explicit_defaults_for_timestamp
+user             = daemon
+
+port             = 3306
+bind_address     = 127.0.0.1
+
+basedir          = ${webox}
+datadir          = ${webox}/var/lib/mysql
+tmpdir           = ${webox}/var/tmp/mysql
+
+pid_file         = ${webox}/var/run/mysqld/mysqld.pid
+socket           = ${webox}/var/run/mysqld/mysqld.sock
 
 #
-# * Basic Settings
+# * Secure
 #
 
-user              = daemon
-pid_file          = ${webox}/var/run/mysql/mysqld.pid
-socket            = ${webox}/var/run/mysql.sock
+secure-file-priv              = null
 
-port              = 3306
-bind_address      = 127.0.0.1
-
-basedir           = ${webox}
-datadir           = ${webox}/var/lib/mysql
-tmpdir            = ${webox}/var/tmp/mysql
-
-#
-# * Fine Tuning
-#
-
-max_connections  = 128
+default_authentication_plugin = mysql_native_password
 
 #
 # * Logging
 #
 
+log_bin             = ${webox}/var/log/mysql/bin-log
+relay_log           = ${webox}/var/log/mysql/relay-log
+
 log_error           = ${webox}/var/log/mysql/error.log
-
-general_log         = 0
 general_log_file    = ${webox}/var/log/mysql/mysql.log
-
-slow_query_log
 slow_query_log_file = ${webox}/var/log/mysql/slow.log
-long_query_time     = 30
 
 #
 # * IMPORTANT: Additional settings that can override those from this file!
