--- a/builder/Declare/basefs/etc/php/php.ini
+++ b/builder/Declare/basefs/etc/php/php.ini
@@ -91,7 +91,7 @@ date.timezone = Asia/Shanghai
 
 [Pdo_mysql]
 
-pdo_mysql.default_socket = ${webox}/var/run/mysql.sock
+pdo_mysql.default_socket = ${webox}/var/run/mysqld/mysqld.sock
 
 [mail function]
 
@@ -100,7 +100,7 @@ mail.log = ${webox}/var/log/php/mail.log
 
 [MySQLi]
 
-mysqli.default_socket = ${webox}/var/run/mysql.sock
+mysqli.default_socket = ${webox}/var/run/mysqld/mysqld.sock
 
 [Session]
 
